--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,3 +51,12 @@ a.decoration{
     background-image: none;
     background-color: #ffffff;
 }
+
+
+
+.p-inputtext,
+.p-inputgroup ,
+.p-button.p-button-icon-only
+{
+    height: 2.5rem;
+}
