--- a/src/app/views/address-book/address-book.component.html
+++ b/src/app/views/address-book/address-book.component.html
@@ -76,7 +76,7 @@
                 </p-button>
                 {{row.alias}}
             </td>
-            <td>{{row.userFullName }}</td>
+            <td>{{row.user.fullName }}</td>
             <td>{{row.phone}}</td>
             <td>{{row.email}}</td>
             <td class="text-center">{{row.enabled==true?'Yes':'No'}}</td>
