--- a/src/app/views/address-book/address-book-filter/address-book-filter.component.html
+++ b/src/app/views/address-book/address-book-filter/address-book-filter.component.html
@@ -1,1 +1,43 @@
-<p>address-book-filter works!</p>
+<p-dynamicdialog>
+    <p-dialog-content>
+        <div class="scroll-modal pt-3">
+            <form [formGroup]="formFilter">
+                <div class="grid p-formgrid">
+                    <div class="col-12 sm:col-12 md:col-6 lg:col-8 xl:col-9">
+                        <div class="grid">
+                            <div class="col-12 sm:col-12 md:col-12 lg:col-4 xl:col-4 ">
+                                <label>User</label>
+                                <input type="text" pInputText class="p-inputtext-md expand" formControlName="fullName" placeholder="Nombre, A. Paterno y/o A. Materno" />
+                            </div>
+                            <div class="col-12 sm:col-12 md:col-12 lg:col-8 xl:col-8 ">
+                                <label>Address</label>
+                                <input type="text" pInputText class="p-inputtext-md expand" formControlName="address" placeholder="Pais, Estado, Ciudad, Colonia, Calle y/o Código postal" />
+                            </div>
+                        </div>
+                        <div class="grid">
+                            <div class="col-12 sm:col-12 md:col-12 lg:col-4 xl:col-4 ">
+                                <label>Teléfono</label>
+                                <input type="text" pInputText class="p-inputtext-md expand" formControlName="phone" />
+                            </div>
+                            <div class="col-12 sm:col-12 md:col-12 lg:col-4 xl:col-4 ">
+                                <label>eMail</label>
+                                <input type="text" pInputText class="p-inputtext-md expand" formControlName="email" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 sm:col-12 md:col-6 lg:col-4 xl:col-3 text-right">
+                        <label>Status</label>
+                        <p-selectButton [options]="allStatus" optionLabel="name" optionValue="value" formControlName="enabled"></p-selectButton>
+                    </div>
+                </div>
+
+            </form>
+        </div>
+        <p-divider></p-divider>
+    </p-dialog-content>
+
+    <p-dialog-footer class="flex justify-content-end flex-wrap ">
+        <button pButton pRipple label="Search" icon="pi pi-search" class="p-ripple p-button p-button-primary p-component mr-3" (click)="applyFilter();"></button>
+        <button type="button" pButton pRipple icon="pi pi-times" (click)="close()" label="Cacel" class="p-button-outlined"></button>
+    </p-dialog-footer>
+</p-dynamicdialog>
